--- a/styles.css
+++ b/styles.css
@@ -6,19 +6,18 @@
 }
 
 #calculator {
-    top: 20%;
-    margin: 50px auto;
-    width: 400px;
-    height: 360px;
-    box-shadow: 0 2px 8px;
-    border-radius: 2px;
-    padding: 25px;
+    margin: 100px auto 0;
+    width: 800px;
+    height: 800px;
+    box-shadow: 0 2px 8px #464646;
+    border-radius: 4px;
+    padding: 40px;
 }
 
 input {
     width: 100%;
-    height: 50px;
-    font-size: 28px;
+    height: 120px;
+    font-size: 72px;
     padding: 4px;
     text-align: right;
     margin-bottom: 20px;
@@ -36,19 +35,20 @@ input[type=number]::-webkit-inner-spin-button {
     display: -o-flex;
     display: flex;
     flex-wrap: wrap;
+    width: 100%;
     justify-content: space-between;
 }
 
 button {
-    width: 80px;
-    height: 40px;
+    width: 160px;
+    height: 100px;
     border: 1px solid darkgray;
     border-radius: 2px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     text-align: center;
     background-color: #D5D5D5;
     font-weight: bold;
-    font-size: 18px;
+    font-size: 48px;
 }
 
 button:active {
@@ -71,4 +71,26 @@ button:active {
 
 .equal-sign:active {
     background-color: #3266ba;
+}
+
+@media (min-width: 800px) {
+    #calculator {
+        width: 400px;
+        height: 360px;
+        padding: 25px;
+    }
+
+    input {
+        width: 100%;
+        height: 50px;
+        font-size: 32px;
+        margin-bottom: 20px;
+    }
+
+    button {
+        width: 80px;
+        height: 40px;
+        margin-bottom: 10px;
+        font-size: 16px;
+    }
 }
